unified_system/unified_system/working/post_scan_op_20260417.log
{
  "added": 0,
  "skipped_duplicates": 115,
  "total": 351,
  "per_scanner": {
    "bmv": 3,
    "bse_nse": 51,
    "courtlistener": 0,
    "cvm": 21,
    "hkex": 10,
    "kind": 0,
    "sec_enforcement": 30,
    "sedar_plus": 0,
    "tdnet": 0
  }
}
Traceback (most recent call last):
  File "/sessions/sleepy-dazzling-hawking/mnt/Conan/unified_system/tools/run_post_scan.py", line 322, in <module>
    main()
  File "/sessions/sleepy-dazzling-hawking/mnt/Conan/unified_system/tools/run_post_scan.py", line 314, in main
    from convergence_engine import run_convergence
  File "/sessions/sleepy-dazzling-hawking/mnt/Conan/unified_system/tools/convergence_engine.py", line 216
    })
    ^
SyntaxError: unmatched '}'
